<?xml version="1.0" encoding="ISO-8859-1"?>
<!-- 
 Copyright (c) 2001 - 2013 OpenPlans - www.openplans.org. All rights reserved.
 This code is licensed under the GPL 2.0 license, available at the root
 application directory.
 -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  
 <repositories>
  <repository>
   <id>opengeo</id>
   <name>OpenGeo Maven Repository</name>
   <url>http://repo.opengeo.org/</url>
   <snapshots>
     <enabled>true</enabled>
   </snapshots>
  </repository>
  
  <repository>
    <id>osgeo</id>
    <name>Open Source Geospatial Foundation Repository</name>
    <url>http://download.osgeo.org/webdav/geotools/</url>
    <snapshots>
      <enabled>true</enabled>
    </snapshots>
  </repository>

  <repository>
    <id>maven-restlet</id>
    <name>Restlet Maven Repository</name>
    <url>http://maven.restlet.org</url>
    <snapshots>
      <enabled>false</enabled>
    </snapshots>
  </repository>
 </repositories>
  
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>org.geoserver.extension</groupId>
  <artifactId>gs-utfgrid</artifactId>
  <packaging>jar</packaging>
  <name>UTFGrid Output Format</name>
  <version>2.5.1-SNAPSHOT</version>

  <dependencies>
    <dependency>
      <groupId>org.geoserver</groupId>
      <artifactId>gs-wms</artifactId>
      <version>2.5</version>
    </dependency>
    <dependency>
      <groupId>org.geotools</groupId>
      <artifactId>gt-sample-data</artifactId>
      <version>${gt.version}</version>
    </dependency>
    <dependency>  
      <groupId>java3d</groupId>
      <artifactId>vecmath</artifactId>  
      <version>1.3.1</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.8.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <testResources>
      <testResource>
        <directory>src/test/resources</directory>        
      </testResource>      
    </testResources>
    
    <plugins>
   <plugin>
    <artifactId>maven-surefire-plugin</artifactId>
    <version>2.12.3</version>
    <configuration>
     <runOrder>alphabetical</runOrder>
     <source>1.5</source>
     <target>1.5</target>
     <includes>
      <include>**/*Test.java</include>
     </includes>
     <excludes>
      <exclude>${test.exclude.pattern}</exclude>
     </excludes>
     <forkMode>once</forkMode>
     <argLine>-Xmx${test.maxHeapSize} -XX:MaxPermSize=${test.maxPermSize} -enableassertions ${jvm.opts} -Djava.awt.headless=${java.awt.headless} -Dsun.java2d.d3d=${sun.java2d.d3d}-DremoteOwsTests=${remoteOwsTests} -DquietTests=${quietTests} -Dorg.geotools.image.test.enabled=${image.tests} -Dorg.geotools.image.test.interactive=${interactive.image} -Duser.timezone=${user.timezone}</argLine>
     <enableAssertions>true</enableAssertions>
     <printSummary>true</printSummary>
     <testFailureIgnore>${allow.test.failure.ignore}</testFailureIgnore>
     <excludedGroups>${test.excludedGroups}</excludedGroups>
    </configuration>
   </plugin>
</plugins>
  </build>

<properties>
  <gs.version>2.5-SNAPSHOT</gs.version>
  <gt.version>11-SNAPSHOT</gt.version>
  <gwc.version>1.5-SNAPSHOT</gwc.version>
  <spring.version>3.1.4.RELEASE</spring.version>
  <spring.security.version>3.1.0.RELEASE</spring.security.version> 
  <poi.version>3.8</poi.version>
  <wicket.version>1.4.12</wicket.version>
  <ant.version>1.8.4</ant.version>
  <java.awt.headless>true</java.awt.headless>
  <jvm.opts></jvm.opts>
  <jalopy.phase>disabled</jalopy.phase>
  <jalopy.srcExcludesPattern>disabled</jalopy.srcExcludesPattern>
  <test.maxHeapSize>512M</test.maxHeapSize>
  <test.maxPermSize>128M</test.maxPermSize>
  <test.excludedGroups></test.excludedGroups>
  <test.exclude.pattern>none</test.exclude.pattern>
  <quietTests>true</quietTests>
  <remoteOwsTests>false</remoteOwsTests>
  <maven.build.timestamp.format>dd-MMM-yyyy HH:mm</maven.build.timestamp.format>
  <build.timestamp>${maven.build.timestamp}</build.timestamp>
  <build.hudsonId>-1</build.hudsonId>
  <fork.javac>true</fork.javac>
  <javac.maxHeapSize>256m</javac.maxHeapSize>
  <image.tests>true</image.tests>
  <interactive.tests>false</interactive.tests>
  
  <skipTests>true</skipTests>
  
 </properties>

</project>
